# pydtype

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_source/: pydtype.core.doctree  pydtype.core.parser.doctree  pydtype.core.specifier.doctree  pydtype.core.types.doctree  pydtype.doctree  pydtype.frameworks.doctree  pydtype.frameworks.numpy.doctree  pydtype.frameworks.struct.doctree  pydtype.translator.doctree  pydtype.typing.doctree
.github/workflows/: gh-pages.yml  test.yml
_modules/: index.html
_modules/pydtype/: translator.html
_modules/pydtype/core/: parser.html  specifier.html  types.html
_modules/pydtype/frameworks/: numpy.html  struct.html
_source/: pydtype.core.html  pydtype.core.parser.html  pydtype.core.specifier.html  pydtype.core.types.html  pydtype.frameworks.html  pydtype.frameworks.numpy.html  pydtype.frameworks.struct.html  pydtype.html  pydtype.translator.html  pydtype.typing.html
_sources/: index.md.txt
_sources/_source/: pydtype.core.parser.rst.txt  pydtype.core.rst.txt  pydtype.core.specifier.rst.txt  pydtype.core.types.rst.txt  pydtype.frameworks.numpy.rst.txt  pydtype.frameworks.rst.txt  pydtype.frameworks.struct.rst.txt  pydtype.rst.txt  pydtype.translator.rst.txt  pydtype.typing.rst.txt
docs/: conf.py
pydtype/: __init__.py  translator.py  typing.py
pydtype/core/: __init__.py  parser.py  specifier.py  types.py
pydtype/frameworks/: __init__.py  numpy.py  struct.py
tests/: conftest.py  test_nothing.py  test_translator.py
tests/docs/: test_build.py
tests/frameworks/: test_numpy.py  test_struct.py
