[tool.poetry]
name = "pydtype"
version = "0.1.0"
description = "Translate data type specifiers between common frameworks"
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/KaoruNishikawa/pydtype"
repository = "https://github.com/KaoruNishikawa/pydtype"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^4.4", python = "<3.8" }
typing-extensions = { version = "^4.1", python = "<3.8" }

[tool.poetry.dev-dependencies]
black = "^22.4"
flake8 = "^3.8"
ipykernel = "^6.10"
myst-parser = "^0.18"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^6.2.5"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
